# comodo

./: .gitattributes  .gitignore  MUJOCO_LOG.TXT  README.md  pixi.toml  pyproject.toml  setup.cfg  test.xml  test_box.xml
examples/: ankle_anaysis.py  dataBaseFitnessFunction.py  drake_gain_tuning.ipynb  drake_walking.ipynb  hippopt_walking.ipynb  jaxsim_free_fall.py  jaxsim_walking.ipynb  mjx_walking.ipynb  model.urdf  muj_model.xml  mujoco_payload_lifting.ipynb  mujoco_walking.ipynb  mujoco_walking.py  mujoco_walking_position.ipynb  multi_objective.py
examples/include/: chromosomeGenerator.py  dataBaseFitnessFunction.py
examples/meshes/simmechanics/: sim_ecub_chest_prt.stl  sim_ecub_head_neck_2_prt.stl  sim_ecub_head_neck_3_prt.stl  sim_ecub_head_prt.stl  sim_ecub_l_ankle_1_prt.stl  sim_ecub_l_ankle_2_prt.stl  sim_ecub_l_foot_front_prt.stl  sim_ecub_l_foot_rear_prt.stl  sim_ecub_l_forearm_prt.stl  sim_ecub_l_hand_index_1_prt.stl  sim_ecub_l_hand_index_2_prt.stl  sim_ecub_l_hand_index_3_prt.stl  sim_ecub_l_hand_middle_1_prt.stl  sim_ecub_l_hand_middle_2_prt.stl  sim_ecub_l_hand_palm_prt.stl  sim_ecub_l_hand_pinkie_1_prt.stl  sim_ecub_l_hand_pinkie_2_prt.stl  sim_ecub_l_hand_ring_1_prt.stl  sim_ecub_l_hand_ring_2_prt.stl  sim_ecub_l_hand_thumb_1_prt.stl  sim_ecub_l_hand_thumb_2_prt.stl  sim_ecub_l_hand_thumb_3_prt.stl  sim_ecub_l_hip_1_prt.stl  sim_ecub_l_hip_2_prt.stl  sim_ecub_l_hip_3_prt.stl  sim_ecub_l_lower_leg_prt.stl  sim_ecub_l_shoulder_1_prt.stl  sim_ecub_l_shoulder_2_prt.stl  sim_ecub_l_shoulder_3_prt.stl  sim_ecub_l_upper_leg_prt.stl  sim_ecub_l_upperarm_prt.stl  sim_ecub_l_wrist_1_prt.stl  sim_ecub_l_wrist_2_prt.stl  sim_ecub_r_ankle_1_prt.stl  sim_ecub_r_ankle_2_prt.stl  sim_ecub_r_foot_front_prt.stl  sim_ecub_r_foot_rear_prt.stl  sim_ecub_r_forearm_prt.stl  sim_ecub_r_hand_index_1_prt.stl  sim_ecub_r_hand_index_2_prt.stl  (+26 more)
examples/models/: model.urdf  stickbot_mjx.urdf
examples/numeric_data/joint_quantities/: joint_positions.mat  joint_torques.mat  joint_velocities.mat
examples/results/: genetic3000.p  genetic700.p
src/comodo/TSIDController/: TSIDController.py  TSIDParameterTuning.py
src/comodo/abstractClasses/: controller.py  planner.py  simulator.py
src/comodo/centroidalMPC/: centroidalMPC.py  footPositionPlanner.py  mpcParameterTuning.py
src/comodo/drakeSimulator/: drakeSimulator.py  drakeURDFHelper.py  utils.py
src/comodo/ergonomyPlanner/: optimizer.py  planErgonomyTrajectory.py  utils.py
src/comodo/gazeboClassicSimulator/: gazeboClassicSimulator.py  gazeboLauncher.py  robotInterface.py
src/comodo/hippoptWalkingPlanner/: hippoptWalkingPlanner.py  hippoptWalkingPlannerParameterTuning.py
src/comodo/inverseKinematic/: inverseKinematic.py  inverseKinematicParamTuning.py
src/comodo/inverseKinematics/: inverseKinematics.py  inverseKinematicsParamTuning.py
src/comodo/jaxsimSimulator/: __init__.py  jaxsimSimulator.py
src/comodo/mujocoSimulator/: callbacks.py  mjcontactinfo.py  mjxSimulator.py  mujocoSimulator.py  mujocoVisualizer.py  visualiser.py
src/comodo/payloadLiftingController/: payloadLiftingController.py  payloadLiftingParameterTuning.py
src/comodo/robotModel/: createUrdf.py  robotModel.py
src/comodo/utils/: iDynVis.py  visualize_grid.py
src/comodo/visualizers/: iDynTreeVisualizer.py  mujocoVisualizer.py
