[metadata]
name = comodo
description = Suite of parametrized controller with simulation environment for co-design of Humanoid Robots.
long_description = file: README.md
long_description_content_type = text/markdown
author = Carlotta Sartore
author_email = carlotta.elena.sartore@gmail.com
platforms = any
version= 0.0.1
license = BSD-3
license_files = LICENSE
url = https://github.com/ami-iit/comodo

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =
    casadi
    numpy
    idyntree
    adam-robotics
    mujoco
    mujoco-python-viewer
    matplotlib
    gitpython
    urchin
    bipedal-locomotion-framework

[options.packages.find]
where = src
